version = '1.0.1'

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    idea {
        module {
            downloadJavadoc = true
            downloadSources = true
        }
    }

    repositories {
        mavenCentral()
    }

    ext {
        keycloakVersion = '25.0.2'
        quarkusVersion = '3.8.5'
        bouncycastleVersion = '1.78.1'
        lombokVersion = '1.18.34'
        junitVersion = '5.11.0'
        mapstructVersion = '1.5.5.Final'
        generatedMapperSourcesDir = "${buildDir}/generated-src/mapstruct/main"
        toolsDir = new File(projectDir, "tools")
    }

    compileJava.options.encoding = 'UTF-8'

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    java {
        sourceCompatibility = JavaLanguageVersion.of(17)
        targetCompatibility = JavaLanguageVersion.of(17)
    }
}

subprojects {

    version = rootProject.version // + '-' + (System.getenv('CI_PIPELINE_ID') != null ? System.getenv('CI_PIPELINE_ID') : 'SNAPSHOT')
    group = 'ru.alamics.sso'

    buildDir = new File(rootProject.projectDir, "build/" + project.name)

    java {
        sourceCompatibility = JavaLanguageVersion.of(17)
        targetCompatibility = JavaLanguageVersion.of(17)
    }

    dependencies {
        compileOnly(platform("io.quarkus:quarkus-bom:$quarkusVersion"))

        compileOnly "org.projectlombok:lombok:$lombokVersion"
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"
        compileOnly "org.mapstruct:mapstruct:$mapstructVersion"
        annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"

        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
        testImplementation 'org.assertj:assertj-core:3.26.3'
        testImplementation "org.mockito:mockito-junit-jupiter:5.12.0"
    }

    test {
        useJUnitPlatform()
        reports.junitXml.destination = new File(rootProject.projectDir, "build/test-results/" + project.name)
        reports.html.destination = new File(rootProject.projectDir, "build/test-results/" + project.name + "/reports")
    }

}

task bundle {
    dependsOn(':keycloak-extension:bundle')
}

dependencies {
    implementation (
            project(':keycloak-extension'),
    )
}

test {
    dependsOn(':keycloak-extension:test')
}

task deploy {

    dependsOn(':keycloak-extension:war')
    dependsOn(':custom-jpa-provider:jar')

    def warArchive =  tasks.getByPath(':keycloak-extension:jar').getArchiveFile()
    def jarArchive =  tasks.getByPath(':custom-jpa-provider:jar').getArchiveFile()
    def jarModuleXml = new File("$toolsDir", "module.xml")
    def themesFolder = tasks.getByPath(':keycloak-extension:processResources').getDestinationDir().getAbsolutePath() + '/themes'
    def blacklistFolder = tasks.getByPath(':keycloak-extension:processResources').getDestinationDir().getAbsolutePath() + '/standalone'

    def deployDir = System.getenv('KEYCLOAK_DEPLOY_DIR') != null ? System.getenv('KEYCLOAK_DEPLOY_DIR'): "$rootProject.buildDir/deploy"
    def archiveTargetFolder = deployDir + '/standalone/deployments'
    def themesTargetFolder = deployDir + '/themes'
    def blacklistTargetFolder = deployDir + '/standalone'
    def jarModuleFolder = deployDir + '/modules/system/layers/base/ru/alamics/sso/jpa/main'

    inputs.files(warArchive, themesFolder, blacklistFolder)
    outputs.dirs(archiveTargetFolder, themesTargetFolder, blacklistTargetFolder)

    doLast {

        copy {
            from file(warArchive)
            into(archiveTargetFolder)
            rename { String fileName ->
                fileName = "domru-sso.war"
            }
        }
        copy {
            from file(jarArchive)
            into(jarModuleFolder)
            rename { String fileName ->
                fileName = "custom-jpa.jar"
            }
        }
        copy {
            from file(jarArchive)
            into(archiveTargetFolder)
            rename { String fileName ->
                fileName = "custom-jpa.jar"
            }
        }
        copy {
            from file(jarModuleXml)
            into(jarModuleFolder)
        }
        copy {
            from file(themesFolder)
            into(themesTargetFolder)
        }
        copy {
            from file(blacklistFolder)
            into(blacklistTargetFolder)
        }
        copy {
            from file('/configs/local/standalone.xml')
            into(deployDir + '/standalone/configuration')
        }


        //setup hash to front resources
        def currentTime = new Date().format('yyyyMMddHHmmss')
        ant.replaceregexp(match:'hash=', replace:'hash='+currentTime, flags:'g', byline:true) {
            fileset(dir: themesTargetFolder + '/domru/login', includes: 'template.ftl')
        }
        ant.replaceregexp(match:'hash=', replace:'hash='+currentTime, flags:'g', byline:true) {
            fileset(dir: themesTargetFolder + '/stelecom/login', includes: 'template.ftl')
        }
        ant.replaceregexp(match:'hash=', replace:'hash='+currentTime, flags:'g', byline:true) {
            fileset(dir: themesTargetFolder + '/ertelecom/login', includes: 'template.ftl')
        }
    }
}
